--- a/lab_esp32_micropython_intro.adoc
+++ b/lab_esp32_micropython_intro.adoc
@@ -52,8 +52,6 @@ NOTE: Windows users. If you don't see the COM port for your device, it may mean 
 
 NOTE: Windows users, you may use the Windows Subsystem for Linux version 1 (WSL1) to run commands. If your "port" setting is `COM5` on windows, then it becomes `/dev/ttyS5` on WSL1. Make sure your distribution uses WSL1 (not WSL2). If not, you can either convert an existing WSL2 distribution to WSL1, or install a fresh WSL1 distribution. Find tutorials online. 
 
-WARNING: PyMakr require an installation of node on your machine !
-
 WARNING: Linux users: must belong to groups `dialout` and `tty` to access the board.
 
 == Open the interactive prompt (the REPL)
@@ -62,7 +60,8 @@ Once the MicroPython firmware is flashed on the device, you can install the Pyma
 
 
 1. Make sure you have link:https://code.visualstudio.com/Download[Visual Studio Code] installed 
-2. Make sure you have the following extensions installed: link:https://marketplace.visualstudio.com/items?itemName=donjayamanne.python-extension-pack[Python Extension Pack], link:https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance[Pylance], link:https://marketplace.visualstudio.com/items?itemName=pycom.Pymakr[Pymakr].
+2. PyMakr require an installation of node.js on your machine. Make sure you can run command `node`.
+3. Make sure you have the following extensions installed: link:https://marketplace.visualstudio.com/items?itemName=donjayamanne.python-extension-pack[Python Extension Pack], link:https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance[Pylance], link:https://marketplace.visualstudio.com/items?itemName=pycom.Pymakr[Pymakr].
 
 In the Pymakr extension tab, you should find your device under `DEVICES`. Click on "Connect Device" (🗲 button), then on "Create a Terminal". 
 
