--- a/lab_esp32_micropython_intro.adoc
+++ b/lab_esp32_micropython_intro.adoc
@@ -77,14 +77,21 @@ You need to check out the following guides for this exercise:
 
 .Answer these questions and copy your code snippets below 
 . Turn on and off the embedded LED on GPIO#13.
-. Connect the LED you have in your briefcase to GPIO#27 as on the image below. Turn on and off this LED.  
+    
+
+. Connect the LED you have in your briefcase to GPIO#27 as on the image below. Turn on and off this LED. 
+
 
 .LED on GPIO#27
 image:images/led_on_27.png[]
 
 [start=3]
 . Create a timer to turn on and off the LED on GPIO#13 every 500ms.
+
+    
 . Find a way to turn on and off the LED on GPIO#13 every 500ms, and the LED on GPIO#27 every 300ms.
+    
+    
 . As the ESP32 has only four hardware timers (other microcontrollers usually have less), it wouldn't be possible to generalize the solution of exercise 4 to _n_ LEDs. Develop a solution that uses the link:https://docs.micropython.org/en/latest/library/uasyncio.html[`uasyncio` module for asynchronous I/O scheduling] 
 
 NOTE: check how to link:https://docs.micropython.org/en/latest/esp8266/tutorial/repl.html#paste-mode[enter the special paste mode in the REPL] to copy and paste blocks of code 
@@ -93,7 +100,51 @@ _(edit this file and write your answers here)_
 
 [source,python]
 ----
-python code here
+Turn on and off the embedded LED on GPIO#13.
+    
+        import machine
+        pin = machine.Pin(13, machine.Pin.OUT)
+        pin.on()
+        pin.off()
+
+Connect the LED you have in your briefcase to GPIO#27 as on the image below. Turn on and off this LED. 
+
+        import machine
+        pin = machine.Pin(27, machine.Pin.OUT)
+        pin.on()
+        pin.off()
+
+Create a timer to turn on and off the LED on GPIO#13 every 500ms.
+
+        import machine
+        pin = machine.Pin(13, machine.Pin.OUT)
+        def toggle(p):
+            p.value(not p.value()) 
+        import time
+        while True: 
+            toggle(pin)
+            time.sleep_ms(500)
+
+Find a way to turn on and off the LED on GPIO#13 every 500ms, and the LED on GPIO#27 every 300ms.
+
+        import machine
+        pin13 = machine.Pin(13, machine.Pin.OUT)
+        pin27 = machine.Pin(27, machine.Pin.OUT)
+        def toggle(p):
+           p.value(not p.value()) 
+        import time
+        while True: 
+            toggle(pin)
+            time.sleep_ms(500)
+        
+        
+        
+             
+        
+        
+        
+        
+
 ----
 
 == Switch the LED when the button is pressed
