--- a/lab_esp32_micropython_intro.adoc
+++ b/lab_esp32_micropython_intro.adoc
@@ -211,8 +211,6 @@ def callback(p):
 
 button.irq(trigger=Pin.IRQ_FALLING, handler=callback)
 
-
-
 ----
 
 == Print the value of the potentiometer
@@ -257,6 +255,7 @@ while True:
 ----
 
 
+
 == Hello Internet !
 
 You need to check out the following guides, examples, and sources, for this exercise:
@@ -271,6 +270,36 @@ You need to check out the following guides, examples, and sources, for this exer
 . Print the IP address of your ESP32, and of your phone 
 . Synchronize the internal clock with using the NTP protocol using the `ntptime` module
 . Print the updated date and time, modified to take into account our timezone.
+
+[source,python]
+----
+
+Print the current date and time of the ESP32
+
+import time
+print(time.localtime())
+
+Connect the ESP32 to your phone, configured as a WiFi Access Point.
+
+Print the IP address of your ESP32, and of your phone
+
+import network
+sta_if = network.WLAN(network.STA_IF)
+sta_if.active(True)
+sta_if.connect('SSID', 'password')
+sta_if.ifconfig()
+
+Synchronize the internal clock with using the NTP protocol using the `ntptime` module
+
+import ntptime
+ntptime.settime()
+
+
+Print the updated date and time, modified to take into account our timezone.
+
+import time
+print(time.localtime())
+----
 
 == Deep-sleep and temperature reading
 
@@ -290,14 +319,9 @@ You need to check out the following guides for this exercise:
 
 [source,python]
 ----
-
+python code here
 ----
-
-
-        
-                
-                
-        
+       
 
 == DHT22 temperature sensor
 
@@ -324,7 +348,7 @@ image:images/dht22_on_27.png[]
 
 [source,python]
 ----
-
+python code here
 ----
 
 == WS2812B Breakout RGB led
