--- a/lab_esp32_micropython_intro.adoc
+++ b/lab_esp32_micropython_intro.adoc
@@ -289,7 +289,7 @@ Print the IP address of your ESP32, and of your phone
 import network
 sta_if = network.WLAN(network.STA_IF)
 sta_if.active(True)
-sta_if.connect('SSID', 'password')
+sta_if.connect('dann', '123456780')
 sta_if.ifconfig()
 
 Synchronize the internal clock with using the NTP protocol using the `ntptime` module
@@ -402,6 +402,17 @@ image:images/dht22_on_27.png[]
 [source,python]
 ----
 python code here
+
+#Make the setting below and read the temperature and the humidity
+
+from machine import Pin
+from dht import DHT22
+d = DHT22(Pin(27))
+d.measure()
+print(d.temperature())
+print(d.humidity())
+
+#Use excerpts of the code from `dht.py` to fetch an actual data frame (40 bits) from the DHT22 sensor, and display the 16 bits of the temperature and the corresponding integer value, the 16 bits of the humidity and the corresponding integer value, and the 8 bits of the checksum.
 ----
 
 == WS2812B Breakout RGB led
@@ -463,6 +474,70 @@ image:images/8x8_monsters.png[]
 python code here
 
 #What does I2C stands for?
+I2C stands for Inter-Integrated Circuit
+
+#To what pins are buttons A, B, C, connected?
+A = 15
+B = 2
+C = 0
+
+#What is the default I2C address for the I2C peripheral? Check from the official documentation section 8.1.5 a), with "SA0"=0. and "R/W#"=0
+0x3C
+
+#Print the current date and time on the screen, update every second.
+from machine import I2C, Pin
+from ssd1306 import SSD1306_I2C
+import utime
+
+I2C_Start();  // set I2C start sequence
+I2C_Send(slave_address|1); Send I2C slave address in read mode
+I2C_read_ACK(); //master will know slave got data 
+while(number_of bytes){
+I2C_Read();
+I2C_send_ACK();
+number_of bytes--;
+}
+I2C_NAK();    //slave need to know so it will not prepare next data.
+I2C_Stop();   //stop communication
+
+
+I2C_Start();  // set I2C start sequence
+I2C_Send(slave_address); Send I2C slave address in write mode
+I2C_read_ACK(); //master will know slave got data 
+while(number_of bytes){
+I2C_Write();
+I2C_read_ACK(); //master will know slave got data 
+number_of bytes--;
+}
+I2C_Stop(); //stop communication
+
+
+#When button A is pressed, invert the colours.
+from machine import Pin
+from ssd1306 import SSD1306_I2C
+import utime
+
+def button_a_was_pressed():
+    print("Button A was pressed")
+
+button_a = Pin(15, Pin.IN, Pin.PULL_UP)
+button_a.irq(trigger=Pin.IRQ_FALLING, handler=button_a_was_pressed)
+
+#Also print a counter that increments when button B is pressed (use an interrupt)
+from machine import Pin
+from ssd1306 import SSD1306_I2C
+import utime
+
+def button_b_was_pressed():
+    print("Button B was pressed")
+
+button_b = Pin(2, Pin.IN, Pin.PULL_UP)
+button_b.irq(trigger=Pin.IRQ_FALLING, handler=button_b_was_pressed)
+
+#In this file, we see that the framebuf.FrameBuffer.text() method uses the font_petme128_8x8 object at line 794, which stores the pixel array for each ascii character and is defined in a library that is included at line 35.
+#Describe how each character is defined as bits and bytes.
+
+
 
 
 ----
