--- a/lab_nrf52_circuitpython_intro.adoc
+++ b/lab_nrf52_circuitpython_intro.adoc
@@ -25,14 +25,29 @@ image::images/Adafruit_Feather_nRF52840_Sense_pinout.png[]
 
 Browse the specifications about these products.  Answer the following questions.
 
-1. **What kind and how much of flash is available for programs?** 
+1. **What kind and how much of flash is available for programs?**
 2. **For each sensor, state what is its digital interface to the main nRF52840 SoC.**
 3. **For I2C connected devices, provide examples of data flow for obtaining measurement values.** 
 4. **How is the microphone data transmitted?**
 5. **Why are the proximity light and the accelerometer/gyro connected have interrupt pins on gpio#36 and gpio#3? What can that be used for? How?**
 6. **What kind of process would be necessary to detect that the sound is louder than a threshold value?**
 
-_(edit this file and write your answers here)_
+_(1. In terms of flash memory, the nRF52840 Soc includes 1 MB of flash and 256 KB of RAM.)_
+
+_(2. The sensors are connected to the nRF52840 SoC through I2C, SPI, or UART.)_
+
+_(3. The data flow for obtaining measurement values from the SHT Humidity sensor is as follows:
+1. The master sends a start condition.
+2. The master sends the slave address and the R/W bit.
+3. The slave sends an acknowledge.
+4. The master sends the command to read the temperature.
+5. The slave sends an acknowledge.
+6. The master sends a stop condition.
+7. The master sends a start condition.
+8. The master sends the slave address and the R/W bit.
+9. The slave sends an acknowledge.
+10. The master reads the temperature data.
+11. The master sends a stop condition. )_
 
 == Start working with CircuitPython on the nRF52840
 
